# llama-optimus

./: .gitignore  README.md  activate_env.sh  optimus.py  pyproject.toml  set_local_paths.sh  setup.cfg  setup.py
.github/workflows/: python-test.yml
llama_optimus/: __init__.py  cli.py  core.py
src/: benchmark.py  optimus.py  search_space.py
src/llama_optimus/: cli.py  core.py  override_patterns.py  search_space.py
test/: test_core.py
