[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-optimus"
version = "0.1.0"
description = "Automatic optimization of llama.cpp inference flags using Bayesian optimization (Optuna)"
authors = [
  { name="Bruno Arsioli", email="YOUR_EMAIL@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "optuna>=3.0",
  "pandas"
]

[project.scripts]
llama-optimus = "llama_optimus.cli:main"
