[metadata]
name = llama-optimus
version = 0.1.0
description = Automatic optimization of llama.cpp inference flags using Optuna
author = Bruno Arsioli
author_email = YOUR_EMAIL@example.com
license = MIT
readme = README.md

[options]
packages = find:
install_requires =
    optuna>=3.0
    pandas
python_requires = >=3.8

[options.entry_points]
console_scripts =
    llama-optimus = llama_optimus.cli:main
